2022-10-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tests/ec_works.sh: Add unit test to validate use of EC
	fonts when "-mec" option given.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-10-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/latin2.tmac:
	* tmac/latin5.tmac:
	* tmac/latin9.tmac: Perform the character remapping shenanigans
	of the fix for Savannah #63112 only if the output device is
	"latin1" (a terminal using an 8-bit character encoding).  Only
	then can we be sure that Latin-1 glyphs will be unavailable when
	other encodings are used and that `\N` escape sequences will
	identify correct glyph indices in a font (because there is no
	font per se accessible to groff--simply a terminal implementing
	a character encoding).

2022-10-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (GetType1): Clarify diagnostic.
	When failing to open a font file for embedding in a PDF, mention
	this context.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/afmtodit/afmtodit.tables: Update against Unicode 15.
	No substantive changes.

	Fixes <https://savannah.gnu.org/bugs/?63188>.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: If URW fonts were located, add the directory
	where they were found to the configuration report.

	Attempts to fix <https://savannah.gnu.org/bugs/?62860> (2/2).

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4: Try to make gropdf's search for URW font files
	more deterministic.  To disambiguate cases where multiple--not
	necessarily identical--copies may be found on the system, search
	_only_ in the directory given to the `--with-urw-fonts-dir`
	configure option, if present.  This populates the "Foundry" file
	generated by the build, causing gropdf to search there first.
	(GROFF_URW_FONTS_PATH): Stop `AC_SUBST`ing `urwfontsdir` here.